third_party/move/move-compiler/tests/move_check/parser/acquires_list_generic.exp
error[E01012]: invalid access specifier
  ┌─ tests/move_check/parser/acquires_list_generic.move:6:24
  │
6 │     fun foo() acquires B<CupC<R>> {
  │                        ^^^^^^^^^^^ language version 1 only supports simple 'acquires <resource_name>' clauses

